--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <title>中通服智慧物流</title>
+    <title>智慧物流</title>
   </head>
   <body style="margin:0;padding:0">
     <div id="app"></div>
