工程日报明细 20181026
完成工程日报明细取数演示
完成工程日报明细显示调整

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body style="margin:0;padding:0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="./static/js/grass.min.js"></script>
   </body>
 </html>
