20181203 myApi替代grass提供通用功能

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body style="margin:0;padding:0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="./static/js/grass.min.js"></script>
+    <script type="text/javascript" src="./static/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="./static/js/myApi.min.js"></script>
   </body>
 </html>
