20181218 针对微信浏览器不支持scrollTo的修改

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script type="text/javascript" src="./static/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="./static/js/vconsole.min.js"></script>
     <script type="text/javascript" src="./static/js/myApi.min.js"></script>
+
+	<script>
+		// init vConsole
+		var vConsole = new VConsole();
+	</script>
   </body>
 </html>
